--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,19 @@
 *::after {
   box-sizing: border-box;
 }
-body, h1, h2, ul, ol, p {
+body,
+h1,
+h2,
+ul,
+ol,
+p {
   margin: 0;
   padding: 0;
 }
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-.main {
+.pageWrapper {
   background-color: #e3b3b3;
   padding-bottom: 64px;
 }
@@ -51,7 +56,7 @@ body {
 .recipeIngredientsList {
   list-style-position: inside;
   margin-top: 11px;
-  font-size:24px;
+  font-size: 24px;
 }
 .recipeSteps {
   margin-top: 32px;
@@ -59,20 +64,35 @@ body {
 .recipeStepsList {
   margin-top: 14px;
   list-style-position: inside;
-  font-size:24px;
+  font-size: 24px;
 }
 .recipeImages {
   margin-top: 32px;
 }
 .recipeImagesContainer {
   margin-top: 20px;
-  display: flex;           
-  gap: 24px;               
+  display: flex;
+  gap: 24px;
   width: 100%;
 }
-
 .recipeImage {
   max-width: calc(50% - 12px);
-  height: auto;
+  height: 467px;
   object-fit: cover;
+}
+@media (max-width: 768px) {
+  .recipeContainer {
+    padding: 64px 32px;
+  }
+  .recipeImagesContainer {
+    flex-direction: column;
+  }
+  .recipeImage {
+    max-width: 100%;
+  }
+}
+@media (max-width: 1280px) {
+  .pageWrapper {
+    padding-bottom: 0px;
+  }
 }
