--- a/css/styles.css
+++ b/css/styles.css
@@ -109,10 +109,6 @@ body {
     flex-direction: column;
   }
 
-  .recipe-image {
-    max-width: 100%;
-  }
-
   .recipe-portions {
     display: block;
     margin-left: 0;
@@ -120,7 +116,7 @@ body {
 }
 
 @media (max-width: 1280px) {
-  .page-wrapper {
+  body {
     padding-bottom: 0;
   }
 }
